# ds-workspace

./: .gitignore  README.md  copy-testfiles-lab1.sh  copy-testfiles-lab2-1.sh  copy-testfiles-lab2-2.sh  copy-testfiles-lab3-1.sh  copy-testfiles-lab4.sh  copy-testfiles-lab5.sh  copy-testfiles.sh  run-lab1-tests.sh  run-plain-lab2-1.sh  run-plain-lab2-2.sh  run-plain-lab3-1.sh  run-plain-lab3-2.sh  run-plain-lab4-1.sh  run-plain-lab5.sh  run-tests-lab1.sh  run-tests-lab2-1.sh  run-tests-lab2-2.sh
assignment-week01/: README.txt
lab1-1/: README.txt
lab1-2/: README.txt
lab2-1/: CMakeLists.txt  Makefile  README.md  README.txt  expected01.txt  expected02.txt  expected03.txt  expected04.txt  expected05.txt  expected06.txt  expected07.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt  test06.txt  test07.txt
lab2-1/src/: CircularList.cpp  CircularList.h  CircularListMain.cpp
lab2-1/test/: test_CircularList.cpp
lab2-2/: CMakeLists.txt  Makefile  README.txt  expected02.txt  expected03.txt  expected04.txt  expected05.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
lab2-2/test/: TestCircularList.cpp
lab3-1/: CMakeLists.txt  Makefile  README.txt  expected02.txt  expected03.txt  expected04.txt  expected05.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
lab3-2/: README.txt
lab4-1/: CMakeLists.txt  Makefile  README.txt  expected03.txt  expected04.txt  expected05.txt  test03.txt  test04.txt
lab4-2/: README.txt
lab5-1/: CMakeLists.txt  Makefile  README.txt  expected01.txt  expected02.txt  expected03.txt  expected04.txt  expected05.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
lab5-1/samples01/: file1.txt  file2.txt  file3.txt
lab5-1/samples02/: file1.txt  file2.txt
lab5-1/samples03/: translation_king_james.txt  translation_new_international.txt
lab5-1/samples04/: file1.txt
lab5-1/samples05/: file1.txt  file2.txt
lab5-2/: README.txt
samples-hello/: CMakeLists.txt  README.txt
